Fix: Card size on mobile

--- a/src/styles/Game.css
+++ b/src/styles/Game.css
@@ -19,7 +19,7 @@ img:hover {
 }
 
 .card {
-  padding: 0.75rem;
+  padding: 0.75re;
 }
 
 .card img {
@@ -65,4 +65,19 @@ img:hover {
 
 .score {
   font-weight: bold;
+}
+
+@media only screen and (max-width: 600px) {
+  .game-info {
+    padding-top: 0;
+  }
+  .card {
+    padding: 0;
+  }
+  .deck {
+    grid-template-columns: repeat(2, minmax(80px, 160px));
+    grid-template-rows: 1fr 1fr;
+    gap: 0.75rem;
+    grid-auto-rows: 0;
+  }
 }
